--- a/Exe/pom.xml
+++ b/Exe/pom.xml
@@ -27,10 +27,13 @@
 		<!-- dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-web</artifactId> 
 			</dependency -->
 
+		<!-- dependency> <groupId>nl.pvanassen</groupId> <artifactId>ns-api</artifactId> 
+			<version>1.1.0</version> </dependency -->
+
 		<dependency>
-			<groupId>nl.pvanassen</groupId>
-			<artifactId>ns-api</artifactId>
-			<version>1.1.0</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 
 		<dependency>
